[package]
name = "rlr"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
scraper = "0.23.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["cookies", "blocking"] }
dotenv = "0.15.0"
once_cell = "1.21.3"
thiserror = "2.0.12"
log = "0.4.27"
colored = "3.0.0"
wait-timeout = "0.2.1"
clap = { version = "4.5.38", features = ["derive"] }
rpassword = "7.4.0"
directories = "6.0.0"
url = "2.5.4"
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }
